## Process this file with automake to produce Makefile.in
## Created by Anjuta

SUBDIRS = src locale
BUNDLE_DIST = libtorrent compat

bitswashdocdir = ${datadir}/bitswash
bitswashiconsdir = ${datadir}/bitswash/icons
bitswashappdir = ${datadir}/applications
bitswashappicondir = ${datadir}/pixmaps
bitswashflagsdir = ${datadir}/bitswash/icons/flags

bitswashappicon_DATA = \
		       bitswash_256x256.png\
		       bitswash_48x48.png

bitswashapp_DATA = \
		   bitswash.desktop

bitswashdoc_DATA = \
	README\
	COPYING\
	AUTHORS\
	ChangeLog\
	INSTALL\
	NEWS

bitswashicons_DATA= \
	icons/bitswash.png \
	icons/bitswash_256x256.png \
	icons/torrent_open.png\
	icons/torrent_move_up.png\
	icons/torrent_move_down.png\
	icons/torrent_remove.png\
	icons/exit.png\
	icons/torrent_open_url.png\
	icons/torrent_start.png\
	icons/option_preference.png\
	icons/torrent_pause.png\
	icons/torrent_stop.png\
	icons/torrent_create.png\
	icons/torrent_properties.png\
	icons/torrent_open_dir.png\
	icons/torrent_remove_data.png\
	icons/settinggeneral.png\
	icons/settingconnection.png\
	icons/settingtorrent.png\
	icons/settingextension.png

bitswashflags_DATA= \
	icons/flags/ \
	icons/flags/ad.png \
	icons/flags/ae.png \
	icons/flags/af.png \
	icons/flags/ag.png \
	icons/flags/ai.png \
	icons/flags/al.png \
	icons/flags/am.png \
	icons/flags/an.png \
	icons/flags/ao.png \
	icons/flags/ar.png \
	icons/flags/as.png \
	icons/flags/at.png \
	icons/flags/au.png \
	icons/flags/aw.png \
	icons/flags/ax.png \
	icons/flags/az.png \
	icons/flags/ba.png \
	icons/flags/bb.png \
	icons/flags/bd.png \
	icons/flags/be.png \
	icons/flags/bf.png \
	icons/flags/bg.png \
	icons/flags/bh.png \
	icons/flags/bi.png \
	icons/flags/bj.png \
	icons/flags/bm.png \
	icons/flags/bn.png \
	icons/flags/bo.png \
	icons/flags/br.png \
	icons/flags/bs.png \
	icons/flags/bt.png \
	icons/flags/bv.png \
	icons/flags/bw.png \
	icons/flags/by.png \
	icons/flags/bz.png \
	icons/flags/ca.png \
	icons/flags/cc.png \
	icons/flags/cd.png \
	icons/flags/cf.png \
	icons/flags/cg.png \
	icons/flags/ch.png \
	icons/flags/ci.png \
	icons/flags/ck.png \
	icons/flags/cl.png \
	icons/flags/cm.png \
	icons/flags/cn.png \
	icons/flags/co.png \
	icons/flags/cr.png \
	icons/flags/cs.png \
	icons/flags/cu.png \
	icons/flags/cv.png \
	icons/flags/cx.png \
	icons/flags/cy.png \
	icons/flags/cz.png \
	icons/flags/de.png \
	icons/flags/dj.png \
	icons/flags/dk.png \
	icons/flags/dm.png \
	icons/flags/do.png \
	icons/flags/dz.png \
	icons/flags/ec.png \
	icons/flags/ee.png \
	icons/flags/eg.png \
	icons/flags/eh.png \
	icons/flags/er.png \
	icons/flags/es.png \
	icons/flags/et.png \
	icons/flags/eu.png \
	icons/flags/fi.png \
	icons/flags/fj.png \
	icons/flags/fk.png \
	icons/flags/fm.png \
	icons/flags/fo.png \
	icons/flags/fr.png \
	icons/flags/ga.png \
	icons/flags/gb.png \
	icons/flags/gd.png \
	icons/flags/ge.png \
	icons/flags/gf.png \
	icons/flags/gh.png \
	icons/flags/gi.png \
	icons/flags/gl.png \
	icons/flags/gm.png \
	icons/flags/gn.png \
	icons/flags/gp.png \
	icons/flags/gq.png \
	icons/flags/gr.png \
	icons/flags/gs.png \
	icons/flags/gt.png \
	icons/flags/gu.png \
	icons/flags/gw.png \
	icons/flags/gy.png \
	icons/flags/hk.png \
	icons/flags/hm.png \
	icons/flags/hn.png \
	icons/flags/hr.png \
	icons/flags/ht.png \
	icons/flags/hu.png \
	icons/flags/id.png \
	icons/flags/ie.png \
	icons/flags/il.png \
	icons/flags/in.png \
	icons/flags/io.png \
	icons/flags/iq.png \
	icons/flags/ir.png \
	icons/flags/is.png \
	icons/flags/it.png \
	icons/flags/jm.png \
	icons/flags/jo.png \
	icons/flags/jp.png \
	icons/flags/ke.png \
	icons/flags/kg.png \
	icons/flags/kh.png \
	icons/flags/ki.png \
	icons/flags/km.png \
	icons/flags/kn.png \
	icons/flags/kp.png \
	icons/flags/kr.png \
	icons/flags/kw.png \
	icons/flags/ky.png \
	icons/flags/kz.png \
	icons/flags/la.png \
	icons/flags/lb.png \
	icons/flags/lc.png \
	icons/flags/li.png \
	icons/flags/lk.png \
	icons/flags/lr.png \
	icons/flags/ls.png \
	icons/flags/lt.png \
	icons/flags/lu.png \
	icons/flags/lv.png \
	icons/flags/ly.png \
	icons/flags/ma.png \
	icons/flags/mc.png \
	icons/flags/md.png \
	icons/flags/me.png \
	icons/flags/mg.png \
	icons/flags/mh.png \
	icons/flags/mk.png \
	icons/flags/ml.png \
	icons/flags/mm.png \
	icons/flags/mn.png \
	icons/flags/mo.png \
	icons/flags/mp.png \
	icons/flags/mq.png \
	icons/flags/mr.png \
	icons/flags/ms.png \
	icons/flags/mt.png \
	icons/flags/mu.png \
	icons/flags/mv.png \
	icons/flags/mw.png \
	icons/flags/mx.png \
	icons/flags/my.png \
	icons/flags/mz.png \
	icons/flags/na.png \
	icons/flags/nc.png \
	icons/flags/ne.png \
	icons/flags/nf.png \
	icons/flags/ng.png \
	icons/flags/ni.png \
	icons/flags/nl.png \
	icons/flags/no.png \
	icons/flags/np.png \
	icons/flags/nr.png \
	icons/flags/nu.png \
	icons/flags/nz.png \
	icons/flags/om.png \
	icons/flags/pa.png \
	icons/flags/pe.png \
	icons/flags/pf.png \
	icons/flags/pg.png \
	icons/flags/ph.png \
	icons/flags/pk.png \
	icons/flags/pl.png \
	icons/flags/pm.png \
	icons/flags/pn.png \
	icons/flags/pr.png \
	icons/flags/ps.png \
	icons/flags/pt.png \
	icons/flags/pw.png \
	icons/flags/py.png \
	icons/flags/qa.png \
	icons/flags/re.png \
	icons/flags/ro.png \
	icons/flags/rs.png \
	icons/flags/ru.png \
	icons/flags/rw.png \
	icons/flags/sa.png \
	icons/flags/sb.png \
	icons/flags/sc.png \
	icons/flags/sd.png \
	icons/flags/se.png \
	icons/flags/sg.png \
	icons/flags/sh.png \
	icons/flags/si.png \
	icons/flags/sj.png \
	icons/flags/sk.png \
	icons/flags/sl.png \
	icons/flags/sm.png \
	icons/flags/sn.png \
	icons/flags/so.png \
	icons/flags/sr.png \
	icons/flags/st.png \
	icons/flags/sv.png \
	icons/flags/sy.png \
	icons/flags/sz.png \
	icons/flags/tc.png \
	icons/flags/td.png \
	icons/flags/tf.png \
	icons/flags/tg.png \
	icons/flags/th.png \
	icons/flags/tj.png \
	icons/flags/tk.png \
	icons/flags/tl.png \
	icons/flags/tm.png \
	icons/flags/tn.png \
	icons/flags/to.png \
	icons/flags/tr.png \
	icons/flags/tt.png \
	icons/flags/tv.png \
	icons/flags/tw.png \
	icons/flags/tz.png \
	icons/flags/ua.png \
	icons/flags/ug.png \
	icons/flags/um.png \
	icons/flags/us.png \
	icons/flags/uy.png \
	icons/flags/uz.png \
	icons/flags/va.png \
	icons/flags/vc.png \
	icons/flags/ve.png \
	icons/flags/vg.png \
	icons/flags/vi.png \
	icons/flags/vn.png \
	icons/flags/vu.png \
	icons/flags/wf.png \
	icons/flags/ws.png \
	icons/flags/ye.png \
	icons/flags/yt.png \
	icons/flags/za.png \
	icons/flags/zm.png \
	icons/flags/zw.png

EXTRA_DIST = $(bitswashdoc_DATA) $(bitswashicons_DATA) $(bitswashapp_DATA) $(bitswashappicon_DATA) $(bitswashflags_DATA)


# Copy all the spec files. Of cource, only one is actually used.
dist-hook: clean
	for d in $(BUNDLE_DIST) ; do \
		if test -d $$d ; then \
			cp -a $$d $(distdir) ;\
		fi; \
	done
	find $(distdir)/libtorrent -name Makefile -print | xargs rm -f
	find $(distdir)/libtorrent -name .deps -print | xargs rm -Rf

	for specfile in *.spec; do \
		if test -f $$specfile; then \
			cp -p $$specfile $(distdir); \
		fi \
	done
# Remove svn data
	find $(distdir) -name '.svn' -print  | xargs rm -Rf

libtorrent-upgrade-test:
	( libtorrent_svn="https://libtorrent.svn.sourceforge.net/svnroot/libtorrent/trunk" ;\
	swversion=`cat libtorrent/libtorrent-svn-revision` ;\
	head_revision="`svn info $${libtorrent_svn} | grep Revision`" ;\
    head_revision=`echo $${head_revision} | $(AWK) -F: '{ print $$2}' ` ;\
	head_revision=`echo $${head_revision}` ;\
	echo "svn diff -r $${swversion}:$${head_revision} $${libtorrent_svn} > libtorrent-patch-$${head_revision}" ;\
	svn diff -r $${swversion}:$${head_revision} $${libtorrent_svn} > libtorrent-patch-$${head_revision} ;\
	echo Updating libtorrent to r$${head_revision} ; \
	)

libtorrent-upgrade:
	( libtorrent_svn="https://libtorrent.svn.sourceforge.net/svnroot/libtorrent/trunk" ;\
	swversion=`cat libtorrent/libtorrent-svn-revision` ;\
	head_revision="`svn info $${libtorrent_svn} | grep Revision`" ;\
    head_revision=`echo $${head_revision} | $(AWK) -F: '{ print $$2}' ` ;\
	head_revision=`echo $${head_revision}` ;\
	echo "svn diff -r $${swversion}:$${head_revision} $${libtorrent_svn} | patch -p0 -d libtorrent --reject-file=libtorrent-reject" ;\
	svn diff -r $${swversion}:$${head_revision} $${libtorrent_svn} | patch -p0 -d libtorrent --reject-file=libtorrent-reject ;\
	[ -e libtorrent/libtorrent-reject ] && vim libtorrent/libtorrent-reject ;\
	echo Updating libtorrent to r$${head_revision} ; \
	echo $${head_revision} > libtorrent/libtorrent-svn-revision ; \
	)
# Tell versions [3.59,3.63) of GNU make to not export all variables.
# Otherwise a system limit (for SysV at least) may be exceeded.
